Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanNumObjWrapped.quorum
class main
    action main
        Number num
        num:setValue(7.5)
        boolean b = num
    end
end